--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,18 @@
 ---
-abstract: 'Frequently asked questions about Treex'
+abstract: 'Hands-on introduction to the Treex NLP framework'
 author:
   - 'Treex team <treex@ufal.mff.cuni.cz>'
-build_requires: {}
+build_requires:
+  Test::More: 0
+  strict: 0
+  warnings: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300003, CPAN::Meta::Converter version 2.112621'
+generated_by: 'Dist::Zilla version 4.300006, CPAN::Meta::Converter version 2.113640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Treex-Doc
-version: 0.07297
+version: 0.08324
